# uniplay

./: .env  .gitignore  .golangci.yml  Dockerfile  Makefile  README.md  docker-compose.yml  go.mod  go.sum  match.json  metrics.json  profile.out  swagger2.json  swagger2.yaml  weapon_metrics.json
.github/workflows/: ci.yml
api/: openapi3_v1.yaml
cmd/app/: main.go
configs/: local.yml
demoparser/: parser.go
docs/: proj_description.md
docs/.obsidian/: workspace.json
institution_parser/: main.py  unis.sql
institutionparser/: main.py
internal/account/: postgres.go  service.go
internal/app/: api.go  app.go  http.go  migrate.go  otel.go  tmp.go
internal/compendium/: controller.go  postgres.go  service.go  (+1 more)
kratos/: .env.template  README.md  dev-compose.yml  dev-docker-compose.yml  docker-compose.yml
metric-example/: match.json  metrics.json  metrics_dto.json  weapon_metrics.json  weapon_metrics_dto.json
migrations/: 20221107114302_init.down.sql  20221107114302_init.up.sql  20221126052246_insert_weapons.down.sql  20221126052246_insert_weapons.up.sql  20230204180447_insert_universities.down.sql  20230204180447_insert_universities.up.sql  20230406164932_insert_universities.up.sql
openapi/: v1.yaml
server/: .env  .gitignore  .golangci.yml  .mockery.yaml  Makefile  README.md  buf.gen.yaml  buf.yaml  docker-compose.yml  flashbangs.json  gamestate.json  go.mod  go.sum  playerstats.json  rounds.json  swagger2.yaml  weaponstats.json
university/: parser.py
university_parser/: pyproject.toml
web/: README.md  buf.gen.yaml  package-lock.json  package.json
(+259 files in other folders)
