[tool.poetry]
name = "university"
version = "0.1.0"
description = ""
authors = ["Alex Malykh <49870662+ysomad@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.11.2"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
